[package]
name = "compositor-ffi"
version = "3.0.0"
edition.workspace = true

[dependencies]
compositor.workspace = true
compositor-texture.workspace = true
string-box.workspace = true
array-box.workspace = true
value-box.workspace = true
phlow = { workspace = true, optional = true }
phlow-extensions = { workspace = true, optional = true }
cfg-if.workspace = true

[features]
default = [ ]
phlow = [ "dep:phlow", "dep:phlow-extensions", "compositor/phlow" ]
