[package]
name = "compositor-skia-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1.0"
lazy_static = "1.4"
raw-window-handle-5 = { package = "raw-window-handle", version = "0.5", optional = true }
raw-window-handle-6 = { package = "raw-window-handle", version = "0.6", optional = true }
fps_counter = "3.0"

[target.'cfg(target_os="macos")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl", "metal"] }
metal = { version = "0.32" }
cocoa = { version = "0.26" }
core-graphics-types = { version = "0.2" }
foreign-types-shared = { version = "0.3" }

[target.'cfg(target_os="ios")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl", "metal"] }
uikit-sys = { git = "https://github.com/syrel/uikit-sys" }
objc = "0.2"

[target.'cfg(target_os="android")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl"] }
khronos-egl = { version = "6.0", features = [ "dynamic" ], optional = true }
libloading = {version = "0.8", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl"] }
x11 = { version = "2.21", features = ["xlib", "glx"], optional = true }
wayland-sys = { version = "0.31", default-features = false, features = ["egl", "client", "dlopen"], optional = true }
khronos-egl = { version = "6.0", features = ["dynamic"], optional = true }
libloading = {version = "0.8", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl", "embed-icudtl"] }

[target.'cfg(target_os="windows")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl", "d3d"] }

[target.'cfg(target_os="windows")'.dependencies.mozangle]
git = "https://github.com/syrel/mozangle"
rev = "8ad3227cbfe59b9ddbaa95379b5d45804427630d"
optional = true
features = [ "egl" ]

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.62"
optional = true
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
]

[features]
raw-window-handle-5 = ["dep:raw-window-handle-5"]
raw-window-handle-6 = ["dep:raw-window-handle-6"]
d3d = ["skia-safe/d3d", "windows" ]
angle = ["skia-safe/gl", "mozangle"]
x11 = ["skia-safe/x11", "dep:x11"]
wayland = [ "skia-safe/wayland", "dep:wayland-sys" ]
egl = ["skia-safe/egl", "khronos-egl", "libloading" ]

[dev-dependencies]
winit-28 = { package = "winit", version = "0.28" }
winit-29 = { package = "winit", version = "0.29" }

[[example]]
name = "winit-28"
required-features = ["raw-window-handle-5"]

[[example]]
name = "winit-29"
required-features = ["raw-window-handle-6"]