[package]
name = "compositor-skia-platform"
version = "2.4.0"
edition.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
raw-window-handle-5 = { workspace = true, optional = true }
raw-window-handle-6 = { workspace = true, optional = true }
fps_counter.workspace = true
num_enum.workspace = true
thiserror.workspace = true

[target.'cfg(target_os="macos")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["metal"] }
metal.workspace = true
cocoa.workspace = true
core-graphics-types.workspace = true
foreign-types-shared.workspace = true

[target.'cfg(target_os="ios")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["metal"] }
uikit-sys.workspace = true
objc.workspace = true

[target.'cfg(target_os="android")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl"] }
khronos-egl = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }

[target.'cfg(target_os="linux")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl"] }
x11 = { workspace = true, optional = true }
wayland-sys = { workspace = true, optional = true }
khronos-egl = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl", "embed-icudtl"] }

[target.'cfg(target_os="windows")'.dependencies]
skia-safe = { version = ">=0.90", default-features = false, features = ["gl", "d3d"] }
mozangle.workspace = true

[target.'cfg(target_os="windows")'.dependencies.windows]
workspace = true
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
]

[features]
raw-window-handle-5 = ["dep:raw-window-handle-5"]
raw-window-handle-6 = ["dep:raw-window-handle-6"]
x11 = ["skia-safe/x11", "dep:x11"]
wayland = [ "skia-safe/wayland", "dep:wayland-sys" ]
egl = ["skia-safe/egl", "khronos-egl", "libloading" ]

[dev-dependencies]
winit-28.workspace = true
winit-29.workspace = true

[[example]]
name = "winit-28"
required-features = ["raw-window-handle-5"]

[[example]]
name = "winit-29"
required-features = ["raw-window-handle-6"]
