[package]
name = "compositor-skia"
version = "2.2.0"
edition = "2021"

[dependencies]
compositor = { path = "../compositor" }
skia-safe = { version = ">=0.68" }
log = "0.4"
cfg-if = "1.0"
phlow = { version = "1", optional = true }
phlow-extensions = { version = "1", optional = true }

[dev-dependencies]
winit = "0.27.5"
env_logger = { version = "0.10", features = [ "color" ] }
phlow = { version = "1" }
phlow-extensions = { version = "1" }
phlow-server = { version = "1" }
rand = "0.8"

[features]
default = [ "phlow" ]
gpu = [ "skia-safe/gpu" ]
metal = [ "gpu", "skia-safe/metal" ]
phlow = [ "dep:phlow", "dep:phlow-extensions", "compositor/phlow" ]

# examples
[target.'cfg(target_os = "macos")'.dev-dependencies]
metal-rs = { package = "metal", version = "0.24" }
objc = "0.2.7"
cocoa = "0.24.0"
core-graphics-types = "0.1.1"
foreign-types-shared = "0.1.1"