[package]
name = "compositor-skia"
version = "2.3.0"
edition = "2021"

[dependencies]
compositor = { path = "../compositor" }
compositor-texture = { path = "../compositor-texture" }
compositor-skia-platform = { path = "../compositor-skia-platform" }
log = "0.4"
cfg-if = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
fps_counter = "3.0"
phlow = { version = "1", optional = true }
phlow-extensions = { version = "1", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
foreign-types-shared = { version = "0.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
skia-safe = { version = ">=0.90" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
skia-safe = { version = ">=0.90", features = ["embed-icudtl"] }

[dev-dependencies]
winit = "0.27.5"
env_logger = { version = "0.11", features = [ "color" ] }
phlow = { version = "1" }
phlow-extensions = { version = "1" }
phlow-server = { version = "1" }
rand = "0.8"

[features]
default = [ ]
gpu = [ "skia-safe/gpu" ]
metal = [ "gpu", "skia-safe/metal" ]
phlow = [ "dep:phlow", "dep:phlow-extensions", "compositor/phlow" ]

# examples
[target.'cfg(target_os = "macos")'.dev-dependencies]
metal-rs = { package = "metal", version = "0.32" }
objc = "0.2"
cocoa = "0.26"
core-graphics-types = "0.2"
foreign-types-shared = "0.3"