[package]
name = "compositor-skia"
version = "2.4.0"
edition.workspace = true

[dependencies]
compositor.workspace = true
compositor-texture.workspace = true
compositor-skia-platform.workspace = true
log.workspace = true
cfg-if.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
fps_counter.workspace = true
phlow = { workspace = true, optional = true }
phlow-extensions = { workspace = true, optional = true }

[target.'cfg(target_os="macos")'.dependencies]
foreign-types-shared.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
skia-safe = { version = ">=0.90" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
skia-safe = { version = ">=0.90", features = ["embed-icudtl"] }

[dev-dependencies]
winit.workspace = true
env_logger.workspace = true
phlow.workspace = true
phlow-extensions.workspace = true
phlow-server.workspace = true
rand.workspace = true

[features]
default = [ ]
gpu = [ "skia-safe/gpu" ]
angle = [ "gpu", "skia-safe/gl" ]
metal = [ "gpu", "skia-safe/metal" ]
phlow = [ "dep:phlow", "dep:phlow-extensions", "compositor/phlow" ]

# examples
[target.'cfg(target_os = "macos")'.dev-dependencies]
metal-rs.workspace = true
objc.workspace = true
cocoa.workspace = true
core-graphics-types.workspace = true
foreign-types-shared.workspace = true
