[package]
name = "compositor"
version = "2.3.0"
edition = "2021"

[dependencies]
euclid = "0.22"
ordered-float = "4.1"
cfg-if = "1.0"
phlow = { version = "1", optional = true }
phlow-extensions = { version = "1", optional = true }
rstar = "0.11"
parking_lot = "0.12"
fraction = "0.14"

[features]
default = [ "phlow" ]
phlow = [ "dep:phlow", "dep:phlow-extensions" ]

[dev-dependencies]
phlow-server = "1"