[package]
name = "compositor"
version = "2.4.0"
edition.workspace = true

[dependencies]
compositor-texture.workspace = true
euclid.workspace = true
ordered-float.workspace = true
cfg-if.workspace = true
phlow = { workspace = true, optional = true }
phlow-extensions = { workspace = true, optional = true }
rstar.workspace = true
parking_lot.workspace = true
fraction.workspace = true

[target.'cfg(target_os="macos")'.dependencies]
metal.workspace = true
cocoa.workspace = true
core-graphics-types.workspace = true
foreign-types-shared.workspace = true

[features]
default = [  ]
phlow = [ "dep:phlow", "dep:phlow-extensions" ]

[dev-dependencies]
phlow-server.workspace = true
